<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/margin_270"
    android:layout_height="@dimen/margin_266"
    android:background="@drawable/bg_message">

    <ImageButton
        android:id="@+id/btnCloseMessage"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/btn_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCloseMessage"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_producto_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_131"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/margin_24"
            android:paddingRight="@dimen/margin_24"
            android:contentDescription="@string/todo" />

        <TextView
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_4"
            android:fontFamily="@font/gotham_medium"
            android:gravity="start"
            android:textSize="@dimen/margin_14"
            android:text="@string/txt_description"
            android:textColor="@color/black"
            android:singleLine="true"
            android:ellipsize="marquee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="@dimen/margin_245"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:fontFamily="@font/gotham_book"
                android:textStyle="italic"
                android:textSize="@dimen/margin_14"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_4"
                android:fontFamily="@font/gotham_medium"
                android:gravity="start"
                android:textSize="@dimen/margin_14"
                android:text="@string/txt_Url"
                android:textColor="@color/black"
                android:singleLine="true"
                android:ellipsize="marquee" />

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="@dimen/margin_245"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:fontFamily="@font/gotham_book"
                android:textStyle="italic"
                android:textSize="@dimen/margin_14"
                android:textColor="@color/black" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>